Fix extension name glyphs clipping

--- a/src/sass/components/extensions.scss
+++ b/src/sass/components/extensions.scss
@@ -88,6 +88,7 @@
         }
         &-name{
             font-size: 1.1em;
+            line-height: 1.1em;
             margin-bottom: 0.8em;
             overflow: hidden;
             text-overflow: ellipsis;
